gen/fusiontables/v1/cargo-errors.log
    Checking google-fusiontables1 v0.1.0 (/Users/sthiel/dev/google-apis/generated/gen/fusiontables/v1/lib)
error[E0609]: no field `request` on type `resources::table::ImportRowsRequestBuilder<'a, A>`
    --> fusiontables/v1/lib/src/lib.rs:4003:63
     |
4003 |                 let request_json = ::serde_json::to_vec(&self.request)?;
     |                                                               ^^^^^^^ help: a field with a similar name exists: `reqwest`

error[E0609]: no field `request` on type `resources::table::ImportTableRequestBuilder<'a, A>`
    --> fusiontables/v1/lib/src/lib.rs:4228:63
     |
4228 |                 let request_json = ::serde_json::to_vec(&self.request)?;
     |                                                               ^^^^^^^ help: a field with a similar name exists: `reqwest`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0609`.
error: Could not compile `google-fusiontables1`.

To learn more, run the command again with --verbose.
